# nonconex_quadratic_optimisation

./: dependencies.txt  eigen_squeeze.py  gurobi.py  gurobi_tests_advanced.py  main.py  math3008.py  math3008_function.py  math3008_functions.py  math3008_qp_test.py  pyproject.toml  readme.txt  sandpit.py  sandy_functions.py  spectral_perturbation_analyser.py
Archive/: adjusted_testing_code.py  eign_squeeze_2.py  gurobi_tests_advanced.py  optimization_results.txt_20241010_101953.txt  optimization_results.txt_20241010_111750.txt  optimization_results.txt_20241010_135021.txt  spectral_perturbation_analyser.py  testing_config.py
Archive/Functions/: gurobi_analysis.py  gurobi_tests_advanced.py  spectral_functions_2.py  (+3 more)
Functions/: spectral_perturbation_analyser.py
NewFunctions/: gurobi_tests_advanced.py  spectral_perturbation_analyser.py
Output/: optimization_results.txt  optimization_results.txt_20241004_125806.txt  optimization_results.txt_20241004_130341.txt  optimization_results.txt_20241004_131457.txt  optimization_results.txt_20241010_160721.txt  optimization_results.txt_20241010_161312.txt  optimization_results.txt_20241010_162154.txt  optimization_results.txt_20241010_162610.txt  optimization_results.txt_20241010_183235.txt  optimization_results.txt_20241010_185004.txt  optimization_results.txt_20241011_054806.txt  optimization_results.txt_20241011_060812.txt  optimization_results.txt_20241011_062651.txt  rank_reduction_analysis_results.csv
Tests/: eigen_squeeze_test.py  extended_tests.py  function_validation_testing.py  rank_reduction_analysis_results.csv
